--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
         canvasCtx.beginPath()
         canvasCtx.arc(500, 300, 20, 0, 2 * Math.PI, false)
         canvasCtx.fill()
+
+        // desenha o placar
+        canvasCtx.font = "bold 72px Arial"
+        canvasCtx.textAlign = "center"
+        canvasCtx.textBaseline ="top"
+        canvasCtx.fillStyle = "#01341D"
+        canvasCtx.fillText("3", window.innerHeight / 4, 50)
+        canvasCtx.fillText("1", window.innerHeight / 4 + window.innerHeight / 2, 50)
       }
 
       setup()
